--- a/src/main/resources/templates/admin/fragment/sidebar.html
+++ b/src/main/resources/templates/admin/fragment/sidebar.html
@@ -1,17 +1,22 @@
-<aside class="sidebar-menu" th:fragment="sidebar">
-  <div class="sidebar-inner scrollable-sidebar">
-    <div class="main-menu">
-      <ul class="accordion">
-        <li>
-          <a href="/admin/index">Dashboard<i class="icon-dashboard"></i></a>
-        </li>
-        <li>
-          <a href="/admin/user">User <i class="icon-user_icon"></i></a>
-        </li>
-        <li>
-          <a href="/admin/map">Map <i class="icon-maps"></i></a>
-        </li>
+<!-- sidebar: style can be found in sidebar.less -->
+<section class="sidebar">
+  <!-- sidebar menu: : style can be found in sidebar.less -->
+  <ul class="sidebar-menu">
+    <li class="active treeview">
+      <a href="#">
+        <i class="fa fa-dashboard"></i> <span>Dashboard</span>
+      </a>
+    </li>
+    <li class="treeview">
+      <a href="#">
+        <i class="fa fa-folder"></i>
+        <span>Registration</span>
+        <i class="fa fa-angle-left pull-right"></i>
+      </a>
+      <ul class="treeview-menu">
+        <li><a href="/customers"><i class="fa fa-circle-o"></i> Customers</a></li>
       </ul>
-    </div>
-  </div>
-</aside>
+    </li>
+  </ul>
+</section>
+<!-- /.sidebar -->
