--- a/src/main/resources/templates/admin/layout.html
+++ b/src/main/resources/templates/admin/layout.html
@@ -1,97 +1,111 @@
-<!DOCTYPE html>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
       xmlns:th="http://www.thymeleaf.org">
 <head>
-  <meta charset="utf-8"/>
-  <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <title layout:title-pattern="$DECORATOR_TITLE - $CONTENT_TITLE">SpringBoot AdminLTE2</title>
+  <!-- Tell the browser to be responsive to screen width -->
+  <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport" />
+  <!-- Bootstrap 3.3.6 -->
+  <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css" />
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.5.0/css/font-awesome.min.css" />
+  <!-- Ionicons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css" />
+  <!-- Theme style -->
+  <link rel="stylesheet" href="../dist/css/AdminLTE.min.css" />
+  <!-- AdminLTE Skins. Choose a skin from the css/skins
+       folder instead of downloading all of them to reduce the load. -->
+  <link rel="stylesheet" href="../dist/css/skins/_all-skins.min.css"/>
+  <!-- iCheck -->
+  <link rel="stylesheet" href="/plugins/iCheck/flat/blue.css" />
+  <!-- Morris chart -->
+  <link rel="stylesheet" href="/plugins/morris/morris.css"/>
+  <!-- jvectormap -->
+  <link rel="stylesheet" href="/plugins/jvectormap/jquery-jvectormap-1.2.2.css"/>
+  <!-- Date Picker -->
+  <link rel="stylesheet" href="/plugins/datepicker/datepicker3.css"/>
+  <!-- Daterange picker -->
+  <link rel="stylesheet" href="/plugins/daterangepicker/daterangepicker-bs3.css"/>
+  <!-- bootstrap wysihtml5 - text editor -->
+  <link rel="stylesheet" href="/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css"/>
 
-  <!--<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">-->
-  <!--<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">-->
-
-  <!--&lt;!&ndash;minify css&ndash;&gt;-->
-  <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />-->
-  <!--&lt;!&ndash; Font Awesome &ndash;&gt;-->
-  <!--<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" />-->
-
-  <!--<link rel="stylesheet" type="text/css" href="/css/main.css" />-->
-
-  <!--<script th:src="@{/js/jquery.js}"></script>-->
-  <!--<script th:src="@{/js/bootstrap.min.js}"></script>-->
-  <!--<script src="https://cdn.datatables.net/s/bs/jqc-1.11.3,dt-1.10.10/datatables.min.js"></script>-->
-  <!--<script th:src="@{/lib/jquery.spring-friendly.js}"></script>-->
-
-  <!--<script th:src="@{/js/app.min.js}"></script>-->
-  <!--<script th:src="@{/js/jquery.slimscroll.min.js}"></script>-->
-  <!--<link rel="stylesheet" th:href="@{/css/bootstrap.css}" />-->
-  <!--<link rel="stylesheet" th:href="@{/css/plugins/customs.css}" />-->
-  <!--<link rel="stylesheet" th:href="@{/css/sb-admin.css}" />-->
-  <!--Import Style-->
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" />
-
-  <link rel="stylesheet" th:href="@{/css/style.css}" />
-  <link rel="stylesheet" th:href="@{/css/fonts/icon-edit/style.css}" />
-  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-
-  <!--Own Style and Js-->
-  <link rel="stylesheet" type="text/css" href="/css/main.css" />
-
-  <script th:src="@{/js/jquery.js}"></script>
-  <script th:src="@{/js/bootstrap.min.js}"></script>
-  <script src="https://cdn.datatables.net/s/bs/jqc-1.11.3,dt-1.10.10/datatables.min.js"></script>
-  <script th:src="@{/lib/jquery.spring-friendly.js}"></script>
-
-  <title>Page</title>
+  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+  <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+  <!--[if lt IE 9]>
+  <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
+  <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+  <![endif]-->
 </head>
-<body>
-  <div class="wrapper">
-    <header th:replace="/admin/fragment/header :: header"></header>
-    <aside th:replace="/admin/fragment/sidebar :: sidebar"></aside>
-    <div class="main-container">
-      <div layout:fragment="content"></div>
-    </div>
-  </div>
+<body class="hold-transition skin-blue sidebar-mini">
+<div class="wrapper">
 
-  <!--JS-->
-  <script src='/js/clock.js'></script>
+  <header class="main-header">
+    <div th:replace="fragments/header"></div>
+  </header>
+  <!-- Left side column. contains the logo and sidebar -->
+  <aside class="main-sidebar">
+    <div th:replace="fragments/mainsidebar"></div>
+  </aside>
+
+  <!-- Content Wrapper. Contains page content -->
+  <div class="content-wrapper">
+    <!-- Content Header (Page header) -->
+    <section class="content-header" layout:fragment="header"></section>
+
+    <!-- Main content -->
+    <section class="content">
+      <div th:if="${successFlash != null}" class="alert alert-success alert-dismissible">
+        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+        <p th:text="${successFlash}"></p>
+      </div>
+
+      <div th:if="${errorFlash != null}" class="alert alert-danger alert-dismissible">
+        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+        <p th:text="${errorFlash}"></p>
+      </div>
+
+      <div th:if="${infoFlash != null}" class="alert alert-info alert-dismissible">
+        <button type="button" class="close" data-dismiss="alert" aria-hidden="true">×</button>
+        <p th:text="${infoFlash}"></p>
+      </div>
+
+      <div layout:fragment="content"></div>
+    </section>
+    <!-- /.content -->
+  </div>
+  <!-- /.content-wrapper -->
+  <footer class="main-footer">
+    <strong>Copyright &copy; 2019 Spring Boot - AdminLte2.</strong>
+  </footer>
+</div>
+<!-- ./wrapper -->
+
+<!-- jQuery 2.2.0 -->
+<script src="/plugins/jQuery/jQuery-2.2.0.min.js"></script>
+<!-- jQuery UI 1.11.4 -->
+<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
+<!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
+<script>
+  $.widget.bridge('uibutton', $.ui.button);
+</script>
+<script src="/bootstrap/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
+<script src="/plugins/morris/morris.min.js"></script>
+<script src="/plugins/sparkline/jquery.sparkline.min.js"></script>
+<script src="/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
+<script src="/plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
+<script src="/plugins/knob/jquery.knob.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.2/moment.min.js"></script>
+<script src="/plugins/daterangepicker/daterangepicker.js"></script>
+<script src="/plugins/datepicker/bootstrap-datepicker.js"></script>
+<script src="/plugins/validator.min.js"></script>
+<script src="/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js"></script>
+<script src="/plugins/slimScroll/jquery.slimscroll.min.js"></script>
+<script src="/plugins/fastclick/fastclick.js"></script>
+<script src="../dist/js/app.min.js"></script>
+<script src="../dist/js/pages/dashboard.js"></script>
+<script src="../dist/js/demo.js"></script>
 </body>
 </html>
-
-
-<!--<!DOCTYPE html>-->
-<!--<html xmlns="http://www.w3.org/1999/xhtml"-->
-      <!--xmlns:th="http://www.thymeleaf.org">-->
-<!--<head>-->
-  <!--<meta charset="utf-8" />-->
-  <!--<meta http-equiv="X-UA-Compatible" content="IE=edge" />-->
-  <!--<meta name="viewport" content="width=device-width, initial-scale=1" />-->
-  <!--<meta name="description" content="" />-->
-  <!--<meta name="author" content="" />-->
-
-  <!--<link rel="stylesheet" th:href="@{/css/bootstrap.css}" />-->
-  <!--<link rel="stylesheet" th:href="@{/css/plugins/customs.css}" />-->
-  <!--<link rel="stylesheet" th:href="@{/css/sb-admin.css}" />-->
-  <!--<link rel="stylesheet" th:href="@{/css/style.css}" />-->
-  <!--<link rel="stylesheet" th:href="@{/css/fonts/icon-edit/style.css}" />-->
-  <!--<link rel="stylesheet" th:href="@{/font-awesome/css/font-awesome.css}" />-->
-  <!--<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">-->
-  <!--<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">-->
-
-  <!--<script th:src="@{/js/jquery.js}"></script>-->
-  <!--<script th:src="@{/js/bootstrap.min.js}"></script>-->
-  <!--<script src="https://cdn.datatables.net/s/bs/jqc-1.11.3,dt-1.10.10/datatables.min.js"></script>-->
-  <!--<script th:src="@{/lib/jquery.spring-friendly.js}"></script>-->
-
-  <!--<title>Page</title>-->
-<!--</head>-->
-<!--<body>-->
-<!--<div id="wrapper">-->
-  <!--<div th:replace="/admin/fragment/top :: top-header"></div>-->
-  <!--<div id="page-wrapper">-->
-    <!--<div class="padding-md content content-list" layout:fragment="content"></div>-->
-  <!--</div>-->
-<!--</div>-->
-<!--</body>-->
-<!--</html>-->
