--- a/src/main/resources/templates/admin/page/login.html
+++ b/src/main/resources/templates/admin/page/login.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Spring Boot AdminLTE 2 | Login</title>
+  <title>Road 2 Ring | Login</title>
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport" />
   <!-- Bootstrap 3.3.6 -->
