--- a/src/main/resources/templates/admin/fragment/sidebar.html
+++ b/src/main/resources/templates/admin/fragment/sidebar.html
@@ -2,19 +2,19 @@
 <section class="sidebar">
   <!-- sidebar menu: : style can be found in sidebar.less -->
   <ul class="sidebar-menu">
-    <li class="active treeview">
-      <a href="#">
+    <li class="treeview">
+      <a href="/home">
         <i class="fa fa-dashboard"></i> <span>Dashboard</span>
       </a>
     </li>
-    <li class="treeview">
+    <li class="treeview active">
       <a href="#">
         <i class="fa fa-folder"></i>
-        <span>Registration</span>
+        <span>Production</span>
         <i class="fa fa-angle-left pull-right"></i>
       </a>
       <ul class="treeview-menu">
-        <li><a href="/customers"><i class="fa fa-circle-o"></i> Customers</a></li>
+        <li class="active"><a href="/trip"><i class="fa fa-circle-o"></i> Trip</a></li>
       </ul>
     </li>
   </ul>
