--- a/src/main/resources/templates/admin/layout.html
+++ b/src/main/resources/templates/admin/layout.html
@@ -92,7 +92,7 @@
 </script>
 <script src="/bootstrap/js/bootstrap.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
-<script src="/plugins/morris/morris.min.js"></script>
+<!--<script src="/plugins/morris/morris.min.js"></script>-->
 <script src="/plugins/sparkline/jquery.sparkline.min.js"></script>
 <script src="/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js"></script>
 <script src="/plugins/jvectormap/jquery-jvectormap-world-mill-en.js"></script>
@@ -105,7 +105,8 @@
 <script src="/plugins/slimScroll/jquery.slimscroll.min.js"></script>
 <script src="/plugins/fastclick/fastclick.js"></script>
 <script src="/dist/js/app.min.js"></script>
-<script src="/dist/js/pages/dashboard.js"></script>
-<script src="/dist/js/demo.js"></script>
+<!--<script src="/dist/js/pages/dashboard.js"></script>-->
+<!--<script src="/dist/js/demo.js"></script>-->
+<th:block layout:fragment="footer-js"></th:block>
 </body>
 </html>
