--- a/src/main/resources/templates/admin/fragment/sidebar.html
+++ b/src/main/resources/templates/admin/fragment/sidebar.html
@@ -7,14 +7,14 @@
         <i class="fa fa-dashboard"></i> <span>Dashboard</span>
       </a>
     </li>
-    <li class="treeview active">
-      <a href="#">
+    <li class="treeview">
+      <a href="">
         <i class="fa fa-folder"></i>
         <span>Production</span>
         <i class="fa fa-angle-left pull-right"></i>
       </a>
       <ul class="treeview-menu">
-        <li class="active"><a href="/trip"><i class="fa fa-circle-o"></i> Trip</a></li>
+        <li><a href="/trip"><i class="fa fa-circle-o"></i> Trip</a></li>
       </ul>
     </li>
   </ul>
