--- a/src/main/resources/templates/admin/layout.html
+++ b/src/main/resources/templates/admin/layout.html
@@ -108,5 +108,16 @@
 <!--<script src="/dist/js/pages/dashboard.js"></script>-->
 <!--<script src="/dist/js/demo.js"></script>-->
 <th:block layout:fragment="footer-js"></th:block>
+<script>
+  var url = window.location;
+        // for sidebar menu but not for treeview submenu
+        $('ul.sidebar-menu a').filter(function() {
+            return this.href == url.href;
+        }).parent().siblings().removeClass('active').end().addClass('active');
+        // for treeview which is like a submenu
+        $('ul.treeview-menu a').filter(function() {
+            return this.href == url.href;
+        }).parentsUntil(".sidebar-menu > .treeview-menu").siblings().removeClass('active menu-open').end().addClass('active menu-open');
+</script>
 </body>
 </html>
