--- a/src/main/resources/templates/admin/fragment/header.html
+++ b/src/main/resources/templates/admin/fragment/header.html
@@ -17,23 +17,19 @@
       <!-- User Account: style can be found in dropdown.less -->
       <li class="dropdown user user-menu">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-          <img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image" />
-          <span class="hidden-xs">Uzumaki Naruto</span>
+          <img src="dist/img/default_profile.png" class="user-image" alt="User Image" />
+          <span class="hidden-xs" th:inline="text">[[${#httpServletRequest.remoteUser}]]</span>
         </a>
         <ul class="dropdown-menu">
           <!-- User image -->
           <li class="user-header">
-            <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image" />
+            <img src="dist/img/default_profile.png" class="img-circle" alt="User Image" />
 
-            <p>
-              Uzumaki Naruto - Hokage
+            <p th:inline="text">[[${#httpServletRequest.remoteUser}]]
             </p>
           </li>
           <!-- Menu Footer-->
           <li class="user-footer">
-            <div class="pull-left">
-              <a href="#" class="btn btn-default btn-flat">My Contacts</a>
-            </div>
             <div class="pull-right">
               <a href="/logout" class="btn btn-default btn-flat">Logout</a>
             </div>
@@ -41,9 +37,9 @@
         </ul>
       </li>
       <!-- Control Sidebar Toggle Button -->
-      <li>
-        <a href="#" data-toggle="control-sidebar"><i class="fa fa-gears"></i></a>
-      </li>
+      <!--<li>-->
+        <!--<a href="#" data-toggle="control-sidebar"><i class="fa fa-gears"></i></a>-->
+      <!--</li>-->
     </ul>
   </div>
 </nav>
