--- a/src/main/resources/templates/admin/page/trip-facility.html
+++ b/src/main/resources/templates/admin/page/trip-facility.html
@@ -35,9 +35,8 @@
           <thead>
           <tr>
             <th>No.</th>
-            <th>Title</th>
-            <th>Duration</th>
-            <th>Captain</th>
+            <th>Name</th>
+            <th>Include</th>
             <th>Action</th>
           </tr>
           </thead>
@@ -53,7 +52,7 @@
   <!--<script type="text/javascript" src="https://cdn.datatables.net/s/bs/jqc-1.11.3,dt-1.10.10/datatables.min.js"></script>-->
   <script src="../../plugins/datatables/jquery.dataTables.min.js"></script>
   <script src="../../plugins/datatables/dataTables.bootstrap.min.js"></script>
-  <script src="../../js/si/tripList.js"></script>
+  <script src="../../js/si/tripFacilityList.js"></script>
 </th:block>
 </body>
 </html>
