--- a/src/main/resources/templates/admin/layout.html
+++ b/src/main/resources/templates/admin/layout.html
@@ -76,9 +76,9 @@
     <!-- /.content -->
   </div>
   <!-- /.content-wrapper -->
-  <footer class="main-footer">
-    <strong>Copyright &copy; 2019 Spring Boot - AdminLte2.</strong>
-  </footer>
+  <!--<footer class="main-footer">-->
+    <!--<strong>Copyright &copy; 2019 Road2Ring</strong>-->
+  <!--</footer>-->
 </div>
 <!-- ./wrapper -->
 
