--- a/src/main/resources/templates/admin/page/trip-itinerary.html
+++ b/src/main/resources/templates/admin/page/trip-itinerary.html
@@ -28,7 +28,7 @@
   <div class="col-xs-12">
     <div class="box">
       <div class="box-header">
-        <h3 class="box-title">Trip List</h3>
+        <h3 class="box-title">Trip Itinerary List</h3>
       </div>
       <div class="box-body">
         <table id="rsp-tbl" class="table table-bordered table-hover">
