--- a/src/main/resources/templates/admin/page/trip-itinerary.html
+++ b/src/main/resources/templates/admin/page/trip-itinerary.html
@@ -35,8 +35,8 @@
           <thead>
           <tr>
             <th>No.</th>
-            <th>Title</th>
-            <th>Description</th>
+            <th>Event Title</th>
+            <th>Event Description</th>
             <th>Group Title</th>
             <th>Action</th>
           </tr>
