hapus href yang belum ada

--- a/src/main/resources/templates/admin/fragment/sidebar.html
+++ b/src/main/resources/templates/admin/fragment/sidebar.html
@@ -2,11 +2,11 @@
 <section class="sidebar">
   <!-- sidebar menu: : style can be found in sidebar.less -->
   <ul class="sidebar-menu">
-    <li class="treeview">
-      <a href="/home">
-        <i class="fa fa-dashboard"></i> <span>Dashboard</span>
-      </a>
-    </li>
+    <!--<li class="treeview">-->
+      <!--<a href="/home">-->
+        <!--<i class="fa fa-dashboard"></i> <span>Dashboard</span>-->
+      <!--</a>-->
+    <!--</li>-->
     <li class="treeview">
       <a href="">
         <i class="fa fa-folder"></i>
@@ -15,10 +15,10 @@
       </a>
       <ul class="treeview-menu">
         <li><a href="/trip"><i class="fa fa-circle-o"></i> Trips</a></li>
-        <li><a href="/facility"><i class="fa fa-circle-o"></i> Facilities</a></li>
-        <li><a href="/motor"><i class="fa fa-circle-o"></i> Motors</a></li>
-        <li><a href="/accessories"><i class="fa fa-circle-o"></i> Accessories</a></li>
-        <li><a href="/captain"><i class="fa fa-circle-o"></i> Captain</a></li>
+        <li><a href="/#"><i class="fa fa-circle-o"></i> Facilities</a></li>
+        <li><a href="/#"><i class="fa fa-circle-o"></i> Motors</a></li>
+        <li><a href="/#"><i class="fa fa-circle-o"></i> Accessories</a></li>
+        <li><a href="/#"><i class="fa fa-circle-o"></i> Captain</a></li>
       </ul>
     </li>
     <li class="treeview">
@@ -28,8 +28,8 @@
         <i class="fa fa-angle-left pull-right"></i>
       </a>
       <ul class="treeview-menu">
-        <li><a href="/blog"><i class="fa fa-circle-o"></i> Blog</a></li>
-        <li><a href="/testi"><i class="fa fa-circle-o"></i> Testi</a></li>
+        <li><a href="/#"><i class="fa fa-circle-o"></i> Blog</a></li>
+        <li><a href="/#"><i class="fa fa-circle-o"></i> Testi</a></li>
       </ul>
     </li>
     <li class="treeview">
@@ -39,8 +39,8 @@
         <i class="fa fa-angle-left pull-right"></i>
       </a>
       <ul class="treeview-menu">
-        <li><a href="/confirmation"><i class="fa fa-circle-o"></i> Confirmation</a></li>
-        <li><a href="/request-trip"><i class="fa fa-circle-o"></i> Request Trip</a></li>
+        <li><a href="/#"><i class="fa fa-circle-o"></i> Confirmation</a></li>
+        <li><a href="/#"><i class="fa fa-circle-o"></i> Request Trip</a></li>
       </ul>
     </li>
   </ul>
