--- a/src/main/resources/templates/admin/forms/trip-itinerary.html
+++ b/src/main/resources/templates/admin/forms/trip-itinerary.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
-<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="/admin/layout">
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="admin/layout">
 <head>
   <title>R2R-Trip</title>
 </head>
