--- a/src/main/resources/templates/admin/layout.html
+++ b/src/main/resources/templates/admin/layout.html
@@ -42,11 +42,11 @@
 <div class="wrapper">
 
   <header class="main-header">
-    <div th:replace="/admin/fragment/header"></div>
+    <div th:replace="admin/fragment/header"></div>
   </header>
   <!-- Left side column. contains the logo and sidebar -->
   <aside class="main-sidebar">
-    <div th:replace="/admin/fragment/sidebar"></div>
+    <div th:replace="admin/fragment/sidebar"></div>
   </aside>
 
   <!-- Content Wrapper. Contains page content -->
