--- a/src/main/resources/templates/admin/page/trip-itinerary.html
+++ b/src/main/resources/templates/admin/page/trip-itinerary.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html layout:decorator="/admin/layout">
+<html layout:decorator="admin/layout">
 <head>
   <title>R2R-Trip</title>
   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/s/bs/jqc-1.11.3,dt-1.10.10/datatables.min.css" />
