complete read for trip stuff (not include accessories)

--- a/src/main/resources/templates/admin/fragment/sidebar.html
+++ b/src/main/resources/templates/admin/fragment/sidebar.html
@@ -15,10 +15,10 @@
       </a>
       <ul class="treeview-menu">
         <li><a href="/trip"><i class="fa fa-circle-o"></i> Trips</a></li>
-        <li><a href="/#"><i class="fa fa-circle-o"></i> Facilities</a></li>
-        <li><a href="/#"><i class="fa fa-circle-o"></i> Motors</a></li>
+        <li><a href="/facility"><i class="fa fa-circle-o"></i> Facilities</a></li>
+        <li><a href="/motor"><i class="fa fa-circle-o"></i> Motors</a></li>
         <li><a href="/#"><i class="fa fa-circle-o"></i> Accessories</a></li>
-        <li><a href="/#"><i class="fa fa-circle-o"></i> Captain</a></li>
+        <li><a href="/captain"><i class="fa fa-circle-o"></i> Captain</a></li>
       </ul>
     </li>
     <li class="treeview">
