--- a/src/main/resources/templates/admin/forms/trip.html
+++ b/src/main/resources/templates/admin/forms/trip.html
@@ -2,6 +2,8 @@
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorator="admin/layout">
 <head>
   <title>R2R-Trip</title>
+  <link type="text/css" href="../../css/jquery-ui-1.10.0.custom.css" rel="stylesheet"/>
+  <link type="text/css" href="../../css/bootstrap-tokenfield.min.css" rel="stylesheet"/>
   <style>
 .ck-editor__editable {
     min-height: 200px;
@@ -21,14 +23,15 @@
     </div>
     <form role="form" th:action="@{'/trip/save'}" th:object="${response}" method="post">
       <div class="box-body">
+        <input id="object_id" type="hidden" name="id" th:if="${response.object.id != 0}" th:value="${response.object.id}">
         <div class="form-group">
           <label for="title">Title</label>
-          <input type="text" class="form-control" name="title" id="title" placeholder="Title" required>
+          <input type="text" class="form-control" name="title" id="title" placeholder="Title" th:value="${response.object.title}" required>
         </div>
 
         <div class="form-group">
           <label for="description">Description</label>
-          <textarea class="form-control" name="description" id="description" placeholder="Enter description"></textarea>
+          <textarea class="form-control" name="description" id="description" placeholder="Enter description" th:text="${response.object.description}"></textarea>
         </div>
 
         <div class="form-group">
@@ -47,43 +50,54 @@
 
         <div class="form-group">
           <label for="max-rider">Max Rider</label>
-          <input type="number" name="maxRider" id="max-rider" class="form-control" placeholder="Max Rider" required>
+          <input type="number" name="maxRider" id="max-rider" class="form-control" placeholder="Max Rider" th:value="${response.object.maxRider}" required>
         </div>
 
         <div class="form-group">
           <label for="duration">Duration</label>
           <div class="input-group" id="duration">
-            <input type="number" name="duration" class="form-control" placeholder="Duration" required>
+            <input type="number" name="duration" class="form-control" placeholder="Duration" th:value="${response.object.duration}" required>
             <span class="input-group-addon">Days</span>
           </div>
         </div>
 
         <div class="form-group">
-          <label for="distance">Duration</label>
+          <label for="distance">Distance</label>
           <div class="input-group" id="distance">
-            <input type="number" name="distance" class="form-control" placeholder="Distance" required>
+            <input type="number" name="distance" class="form-control" placeholder="Distance" th:value="${response.object.distance}" required>
             <span class="input-group-addon">KMs</span>
           </div>
         </div>
 
+        <div id="input-list-tab" class="m-top-xs list-tab" th:value="${facilities}">
+          <div th:each="facility, iterStat:${facilities}" th:id="warper-+${iterStat.index}+.id" class="m-bottom-xs warpers">
+            <input type="checkbox" th:value="${facility.id}" th:text="' ' + ${facility.name}" th:checked="${checked != udefined ? #lists.contains(checked, facility.id) : false}" > <br>
+          </div>
+        </div>
+
+        <div class="form-group">
+          <label for="facility-not">Facility(not include)</label>
+          <textarea class="form-control" name="facilityNot" th:text="${response.object.facilityNot}" id="facility-not" placeholder="Enter Facility Not Include"></textarea>
+        </div>
+
         <div class="form-group">
           <label for="tag">Tag</label>
-          <input type="text" name="tag" class="form-control" id="tag" placeholder="Tag" required>
+          <input type="text" name="tag" class="form-control" th:value="${response.object.tag}" id="tag" placeholder="Tag" required>
         </div>
 
         <div class="form-group">
           <label for="captain">Captain</label>
-          <input type="text" class="form-control" id="captain" placeholder="Captain" required>
+          <input type="text" class="form-control" id="captain" placeholder="Captain" th:value="${response.object.roadCaptain}">
         </div>
 
         <div class="form-group">
           <label for="meeting">Meeting Point</label>
-          <input type="text" class="form-control" id="meeting" name="meetingPoint" placeholder="Meeting Point" required>
+          <input type="text" class="form-control" id="meeting" name="meetingPoint" th:value="${response.object.meetingPoint}" placeholder="Meeting Point" required>
         </div>
 
         <div class="form-group">
           <label for="terran">Terrain</label>
-          <input type="text" class="form-control" name="terrain" id="terran" placeholder="Terrain" required>
+          <input type="text" class="form-control" name="terrain" id="terran" placeholder="Terrain" th:value="${response.object.terrain}" required>
         </div>
       </div>
       <div class="box-footer">
@@ -93,11 +107,26 @@
   </div>
 </div>
 <th:block layout:fragment="footer-js">
+  <link type="text/css" href="../../css/jquery-ui-1.10.0.custom.css" rel="stylesheet"/>
+  <script src="https://code.jquery.com/ui/1.10.4/jquery-ui.min.js"></script>
   <script src="https://cdn.ckeditor.com/ckeditor5/12.0.0/classic/ckeditor.js"></script>
+  <script src="../../js/si/bootstrap-tokenfield.min.js"></script>
+  <script src="../../js/si/typehead.bundle.min.js"></script>
   <script>
+    $('#tag').tokenfield({
+      <!--autocomplete: {-->
+        <!---->
+        <!--delay: 100-->
+      <!--},-->
+      <!--showAutocompleteOnFocus: true-->
+    })
+
     ClassicEditor
     .create(document.querySelector( '#description' ))
-    .then(editor => {})
+    .then(editor => {
+      myEditor = editor;
+      console.log(myEditor.getData())
+    })
     .catch(error => {});
   </script>
 </th:block>
