trip and masterdata crud

--- a/src/main/resources/templates/admin/forms/trip.html
+++ b/src/main/resources/templates/admin/forms/trip.html
@@ -13,6 +13,8 @@
       box-shadow: 0 1px 1px rgba(0,0,0,0.5) !important;
       padding: 5px 10px;
 }
+
+
 </style>
 </head>
 <body>
@@ -23,7 +25,7 @@
     </div>
     <form role="form" th:action="@{'/trip/save'}" th:object="${response}" method="post">
       <div class="box-body">
-        <input id="object_id" type="hidden" name="id" th:if="${response.object.id != 0}" th:value="${response.object.id}">
+        <input id="object_id" type="hidden" name="id" th:if="${response.object.id != 0}" th:value="${response.object.id != null && response.object.id != 0 ? response.object.id : 0}">
         <div class="form-group">
           <label for="title">Title</label>
           <input type="text" class="form-control" name="title" id="title" placeholder="Title" th:value="${response.object.title}" required>
@@ -50,13 +52,13 @@
 
         <div class="form-group">
           <label for="max-rider">Max Rider</label>
-          <input type="number" name="maxRider" id="max-rider" class="form-control" placeholder="Max Rider" th:value="${response.object.maxRider}" required>
+          <input type="number" min="0" name="maxRider" id="max-rider" class="form-control" placeholder="Max Rider" th:value="${response.object.maxRider}" required>
         </div>
 
         <div class="form-group">
           <label for="duration">Duration</label>
           <div class="input-group" id="duration">
-            <input type="number" name="duration" class="form-control" placeholder="Duration" th:value="${response.object.duration}" required>
+            <input type="number" min="0" name="duration" class="form-control" placeholder="Duration" th:value="${response.object.duration}" required>
             <span class="input-group-addon">Days</span>
           </div>
         </div>
@@ -64,17 +66,18 @@
         <div class="form-group">
           <label for="distance">Distance</label>
           <div class="input-group" id="distance">
-            <input type="number" name="distance" class="form-control" placeholder="Distance" th:value="${response.object.distance}" required>
+            <input type="number" min="0" name="distance" class="form-control" placeholder="Distance" th:value="${response.object.distance}" required>
             <span class="input-group-addon">KMs</span>
           </div>
         </div>
 
-        <div id="input-list-tab" class="m-top-xs list-tab" th:value="${facilities}">
+        <div id="input-list-tab" class="m-top-xs form-group" style="display: flow-root" th:value="${facilities}">
           <div th:each="facility, iterStat:${facilities}" th:id="warper-+${iterStat.index}+.id" class="m-bottom-xs warpers">
-            <input type="checkbox" th:value="${facility.id}" th:text="' ' + ${facility.name}" th:checked="${checked != udefined ? #lists.contains(checked, facility.id) : false}" > <br>
+            <div class="col-sm-4">
+              <input type="checkbox" th:value="${facility.id}" th:text="' ' + ${facility.name}" th:checked="${checked != udefined ? #lists.contains(checked, facility.id) : false}" > <br>
+            </div>
           </div>
         </div>
-
         <div class="form-group">
           <label for="facility-not">Facility(not include)</label>
           <textarea class="form-control" name="facilityNot" th:text="${response.object.facilityNot}" id="facility-not" placeholder="Enter Facility Not Include"></textarea>
@@ -87,7 +90,8 @@
 
         <div class="form-group">
           <label for="captain">Captain</label>
-          <input type="text" class="form-control" id="captain" placeholder="Captain" th:value="${response.object.roadCaptain}">
+          <input type="text" class="form-control" id="captain" placeholder="Captain" th:value="${response.object.roadCaptain.name != null && response.object.roadCaptain.name != '' ? response.object.roadCaptain.name : ''}">
+          <input type="hidden" class="hidden tournamentId" name="roadCaptain" th:value="${response.object.roadCaptain != null && response.object.roadCaptain.id != 0 ? response.object.roadCaptain.id : 0}">
         </div>
 
         <div class="form-group">
@@ -120,6 +124,37 @@
       <!--},-->
       <!--showAutocompleteOnFocus: true-->
     })
+    var hostname = $(location).attr('protocol') + '//' + $(location).attr('host');
+    var api = hostname + "/api";
+
+    $('#captain').autocomplete({
+      source: function(request, response) {
+      console.log(request.term)
+        var arrdata = [];
+        var json_data = $.getJSON(api + '/captain/helper', {
+            keyword: request.term
+        });
+        json_data.done(function(data) {
+            //if (!$.isEmptyObject(data)) {
+            $.each(data.object, function(key, value) {
+                arrdata.push(value)
+            });
+            response($.map(arrdata, function (value, key) {
+                return{
+                    label: value.name,
+                    value: value.id
+            }
+            }));
+        });
+    },
+      select: function(event,ui){
+      $(this).val(ui.item.label)
+      $(this).parent().find("input.hidden").val(ui.item.value)
+      return false
+    },
+    minLength: 2,
+    delay: 100
+  });
 
     ClassicEditor
     .create(document.querySelector( '#description' ))
