--- a/src/main/resources/templates/admin/page/price-list.html
+++ b/src/main/resources/templates/admin/page/price-list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html layout:decorator="admin/layout">
 <head>
-  <title>R2R-Trip</title>
+  <title>R2R-Trip Price List</title>
   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/s/bs/jqc-1.11.3,dt-1.10.10/datatables.min.css" />
   <style>
     span a {
@@ -26,32 +26,30 @@
 <body>
 <div layout:fragment="content">
   <div class="box">
-    <div class="box-header with-border">
-      <h3 class="box-title" th:text="${response.object.title + ' Itinerary List'}"></h3>
+    <div class="box-header">
+      <h3 class="box-title">Trip Price List</h3>
     </div>
     <div class="box-body">
-      <table id="rsp-tbl" class="table table-hover">
+      <table id="rsp-tbl" class="table table-bordered table-hover">
         <thead>
         <tr>
           <th>No.</th>
-          <th>Event Title</th>
-          <th>Event Description</th>
-          <th>Group Title</th>
+          <th>Start Date</th>
+          <th>End Date</th>
+          <th>Price</th>
+          <th>Status</th>
+          <th>Discount</th>
           <th>Action</th>
         </tr>
         </thead>
-        <!--<tfoot>-->
-        <!--<th>Description</th>-->
-        <!--</tfoot>-->
       </table>
     </div>
   </div>
 </div>
 <th:block layout:fragment="footer-js">
-  <!--<script type="text/javascript" src="https://cdn.datatables.net/s/bs/jqc-1.11.3,dt-1.10.10/datatables.min.js"></script>-->
   <script src="../../plugins/datatables/jquery.dataTables.min.js"></script>
   <script src="../../plugins/datatables/dataTables.bootstrap.min.js"></script>
-  <script src="../../js/si/tripItineraryList.js"></script>
+  <script src="../../js/si/tripPriceList.js"></script>
 </th:block>
 </body>
 </html>
